--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,7 @@ h3 {
 h4 {
   color: #fff;
   font-size: 28px;
-  font-weight: 900;
+  font-weight: 700;
   line-height: 120%; /* 24px */
 }
 h5 {
@@ -440,6 +440,91 @@ p {
   background-image: url("../images/trainer6.png");
 }
 
+/* =======Start BMI ============== */
+
+.bmi p{
+  text-align: center;
+  padding-top: 14px;
+}
+.bmi-main{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 10px;
+  margin: 90px auto;
+}
+.bmi-chart h4{
+  margin-bottom: 50px;
+  text-align: left;
+}
+
+table {
+  
+  border-collapse: collapse;
+    box-sizing: border-box;
+    border-spacing: 2px;
+    border-color: gray;
+}
+table th{
+  color: #FFF;
+font-size: 16px;
+font-weight: 500;
+line-height: 120%; /* 19.2px */
+}
+table td{
+  color: rgba(255, 255, 255, 0.50);
+font-size: 14px;
+font-weight: 400;
+line-height: 120%; /* 16.8px */
+}
+td,th{
+  text-align: left;
+  padding: 13px 18px;
+} 
+
+
+.bmi-calc h4, .bmi-calc p{
+  text-align: left;
+}
+.input-area{
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+.input1, .input2{
+  display: flex;
+}
+
+.input1 input, .input2 input, .input2 select{
+  width: 49%;
+}
+
+
+input,select{
+  margin: 5px;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #373737;
+    color: #AFAFAF;
+    border: none;
+    font-size: 1rem;
+}
+.input-area{
+  display: flex;
+}
+#select-factor {
+    width: 98%;
+}
+
+#calculate {
+    margin-top: 20px;
+    padding: 15px 80px;
+}    
+/* end BMI Calculator */
+
+
+
+
+
 
 
 
@@ -595,6 +680,15 @@ padding: 35px;
 /* =======End Trainings Exercises=====================  */
 .team-div{
   grid-template-columns: repeat(1,1fr);
+}
+/* =======Start BMI Calculator=====================  */
+
+
+.bmi-main{
+  
+  grid-template-columns: repeat(1,1fr);
+  gap: 40px;
+  margin: 90px auto;
 }
 
 
