--- a/styles/style.css
+++ b/styles/style.css
@@ -601,7 +601,7 @@ font-size: 18px;
 font-weight: 400;
 line-height: 24px; /* 120% */
 letter-spacing: 0.3px;
-padding: 35px;
+padding: 35px 0;
 }
 
 
@@ -703,7 +703,10 @@ padding: 35px;
 /* .links, .links p,.fitness p, .fitness h2{
  text-align: center;
 } */
- 
+
+h2{
+  font-size: 30px;
+}
 
 }
 
