--- a/styles/style.css
+++ b/styles/style.css
@@ -523,9 +523,45 @@ input,select{
 }    
 /* end BMI Calculator */
 
-
-
-
+.extraboxess {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    
+}
+.ExtraContainer{
+  
+  padding: 0 20px;
+  
+}
+.extraboxess{
+  display: flex;
+  gap: 40px;
+  margin: 80px 0;
+  padding: 30px ;
+  background-color: #7272726a;
+  border-radius: 20px;
+}
+.extrabox{
+  display: grid;
+  gap: 20px;
+}
+.extrabox div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.extrabox div i{
+  color: white;
+  font-size: 28px;
+  margin-right: 20px;
+}
+.extrabox div h3{
+  font-size: 24px;
+}
+.extrabox button i{
+  font-size: 20px;
+}
 
 
 
@@ -713,7 +749,11 @@ h2{
 }
 
 
-
+.extraboxess {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3,1fr);
+}
 
 
 
@@ -783,6 +823,12 @@ h2{
 /* .links, .links p,.fitness p{
  text-align: center;
 } */
+
+.extraboxess {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3,1fr);
+}
 
 
 
